--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,13 +31,15 @@ endorsed.classpath=
 excludes=
 file.reference.IRFunctions.jar=lib/IRFunctions.jar
 file.reference.jxl.jar=lib/jxl.jar
+file.reference.log4j-1.2.17.jar=lib/log4j-1.2.17.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=lib/mysql-connector-java-5.1.23-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jxl.jar}:\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
-    ${file.reference.IRFunctions.jar}
+    ${file.reference.IRFunctions.jar}:\
+    ${file.reference.log4j-1.2.17.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
